syntax = "proto3";

package user;
import "post.proto";

service UserService {
    rpc CreateUser(User) returns (User);
    rpc GetUserById(GetUserByIdRequest) returns (User);
    rpc Update(User) returns (User);
    rpc Delete(DeleteRequest) returns (Empty);
    rpc ListUsers(ListUserReq) returns (ListUserResponse);
    rpc CheckUniquess(CheckUniqReq) returns (CheckUniqResp);
    rpc RegisterUser(CreateUserAuthReqBody) returns(CreateUserAuthResBody);
    rpc CheckField(CheckFieldRequest) returns(CheckFieldResponse);
    rpc LoginUser(LoginRequest) returns (LoginResponse);
}

message LoginRequest{
    string Email=1;
    string Password=2;
}

message LoginResponse{
    string Id=1;
    string FirstName=2;
    string Username=3;
    string PhoneNumber=4;
    string Email=5;
    string Password=6;
}

message User {
    string id = 1;
    string first_name = 2;
    string last_name = 3;
    string email = 4;
    string password = 5;
    string phone_number = 6;
    repeated Post posts = 7;
}

message CheckUniqReq {
    string filed = 1;
    string value = 2;
}

message CheckUniqResp {
    bool is_exist =1;
}

message DeleteRequest {
    string id = 1;
}

message Empty {

}

message ListUserReq{
    int64 page=1;
    int64 limit=2;
}

message GetAllUser {
    repeated User users=1;
}

message ListUserResponse{
    repeated User users=1;
    int64 count=2;
}

message GetUserByIdRequest {
    string id = 1;
}

message CreateUserAuthReqBody{
	string Id=1;
	string FirstName=2;
	string Username=3;
	string PhoneNumber=4;
	string Email=5;
    string Code=6;
    string Password=7;
}

message CreateUserAuthResBody{
    string Id=1;
	string FirstName=2;
	string Username=3;
	string PhoneNumber=4;
	string Email=5;
    string Code=6;
    string Password=7;
}
message CheckFieldRequest{
    string field=1;
    string  value=2;
}

message CheckFieldResponse{
    bool Check=1;
}